TA-72 Fixed gap in modal

--- a/frontend/src/features/UpdateUserDataModal/UpdateUserDataModal.module.scss
+++ b/frontend/src/features/UpdateUserDataModal/UpdateUserDataModal.module.scss
@@ -2,7 +2,7 @@
 
 .form {
   display: flex;
-  gap: 36px;
+  gap: 18px;
   flex-direction: column;
   width: 100%;
   padding: 36px;
